--- a/disease-recommendation-system.ipynb
+++ b/disease-recommendation-system.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "9f402e86",
    "metadata": {
     "execution": {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "6b6f82b2",
    "metadata": {
     "execution": {
@@ -102,12 +102,12 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('/kaggle/input/doctor-specialist-recommendation-system/Original_Dataset.csv')"
+    "data = pd.read_csv('csv/Original_Dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "e12579ba",
    "metadata": {
     "execution": {
@@ -307,7 +307,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d21ab58f",
    "metadata": {
     "_kg_hide-output": true,
@@ -354,19 +354,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_20/716902651.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[\"Symptoms\"][i] = value[1:value.index(0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[\"Symptoms\"] = 0\n",
     "\n",
@@ -1211,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.7"
   },
   "papermill": {
    "default_parameters": {},
