--- a/disease-recommendation-system.ipynb
+++ b/disease-recommendation-system.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "9f402e86",
    "metadata": {
     "execution": {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "6b6f82b2",
    "metadata": {
     "execution": {
@@ -102,12 +102,12 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('/kaggle/input/doctor-specialist-recommendation-system/Original_Dataset.csv')"
+    "data = pd.read_csv('csv/Original_Dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "e12579ba",
    "metadata": {
     "execution": {
@@ -148,166 +148,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Disease</th>\n",
-       "      <th>Symptom_1</th>\n",
-       "      <th>Symptom_2</th>\n",
-       "      <th>Symptom_3</th>\n",
-       "      <th>Symptom_4</th>\n",
-       "      <th>Symptom_5</th>\n",
-       "      <th>Symptom_6</th>\n",
-       "      <th>Symptom_7</th>\n",
-       "      <th>Symptom_8</th>\n",
-       "      <th>Symptom_9</th>\n",
-       "      <th>Symptom_10</th>\n",
-       "      <th>Symptom_11</th>\n",
-       "      <th>Symptom_12</th>\n",
-       "      <th>Symptom_13</th>\n",
-       "      <th>Symptom_14</th>\n",
-       "      <th>Symptom_15</th>\n",
-       "      <th>Symptom_16</th>\n",
-       "      <th>Symptom_17</th>\n",
+       "      <th>Description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Fungal infection</td>\n",
-       "      <td>itching</td>\n",
-       "      <td>skin_rash</td>\n",
-       "      <td>nodal_skin_eruptions</td>\n",
-       "      <td>dischromic _patches</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Drug Reaction</td>\n",
+       "      <td>An adverse drug reaction (ADR) is an injury ca...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Fungal infection</td>\n",
-       "      <td>skin_rash</td>\n",
-       "      <td>nodal_skin_eruptions</td>\n",
-       "      <td>dischromic _patches</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Malaria</td>\n",
+       "      <td>An infectious disease caused by protozoan para...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Fungal infection</td>\n",
-       "      <td>itching</td>\n",
-       "      <td>nodal_skin_eruptions</td>\n",
-       "      <td>dischromic _patches</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>An allergy is an immune system response to a f...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Fungal infection</td>\n",
-       "      <td>itching</td>\n",
-       "      <td>skin_rash</td>\n",
-       "      <td>dischromic _patches</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Hypothyroidism</td>\n",
+       "      <td>Hypothyroidism, also called underactive thyroi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Fungal infection</td>\n",
-       "      <td>itching</td>\n",
-       "      <td>skin_rash</td>\n",
-       "      <td>nodal_skin_eruptions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Psoriasis</td>\n",
+       "      <td>Psoriasis is a common skin disorder that forms...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Disease   Symptom_1              Symptom_2              Symptom_3  \\\n",
-       "0  Fungal infection     itching              skin_rash   nodal_skin_eruptions   \n",
-       "1  Fungal infection   skin_rash   nodal_skin_eruptions    dischromic _patches   \n",
-       "2  Fungal infection     itching   nodal_skin_eruptions    dischromic _patches   \n",
-       "3  Fungal infection     itching              skin_rash    dischromic _patches   \n",
-       "4  Fungal infection     itching              skin_rash   nodal_skin_eruptions   \n",
-       "\n",
-       "              Symptom_4 Symptom_5 Symptom_6 Symptom_7 Symptom_8 Symptom_9  \\\n",
-       "0   dischromic _patches       NaN       NaN       NaN       NaN       NaN   \n",
-       "1                   NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "2                   NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "3                   NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "4                   NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "\n",
-       "  Symptom_10 Symptom_11 Symptom_12 Symptom_13 Symptom_14 Symptom_15  \\\n",
-       "0        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-       "1        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-       "2        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-       "3        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-       "4        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-       "\n",
-       "  Symptom_16 Symptom_17  \n",
-       "0        NaN        NaN  \n",
-       "1        NaN        NaN  \n",
-       "2        NaN        NaN  \n",
-       "3        NaN        NaN  \n",
-       "4        NaN        NaN  "
+       "          Disease                                        Description\n",
+       "0   Drug Reaction  An adverse drug reaction (ADR) is an injury ca...\n",
+       "1         Malaria  An infectious disease caused by protozoan para...\n",
+       "2         Allergy  An allergy is an immune system response to a f...\n",
+       "3  Hypothyroidism  Hypothyroidism, also called underactive thyroi...\n",
+       "4       Psoriasis  Psoriasis is a common skin disorder that forms..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "d21ab58f",
    "metadata": {
     "_kg_hide-output": true,
@@ -359,7 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_20/716902651.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/4z/n_lw059s1vzcstpgw8gdtn2r0000gn/T/ipykernel_93513/716902651.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
